# op-energy-blockspan-service

./: README.md  ci-tests.nix  nixpkgs.nix  overlay-set.nix  overlay.nix  package-lock.json
.github/workflows/: dev-deploy.yml  op-energy.yml  test.yml
frontend/: .gitignore  angular.json  build-nix-from-node.sh  default.nix  derivation.nix  frontend-node-env.nix  frontend-node-env.patch  frontend-node-packages.nix  frontend.nix  module-frontend.nix  overlay-set.nix  overlay.nix  package-lock.json  package.json  package.json.patch  proxy.conf.js  proxy.conf.local.js  proxy.conf.prod.js  proxy.conf.staging.js  shell.nix  tsconfig.spec.json
frontend/src/: index.html  styles.scss  swagger-ui.css
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/oe/: oe.module.ts  oe.routing.modules.ts
frontend/src/app/oe/components/about/: about.component.html  about.component.scss  about.component.ts
frontend/src/app/oe/components/base-box/: base-box.component.html  base-box.component.scss  base-box.component.spec.ts  base-box.component.ts
frontend/src/app/oe/components/base-box-hor/: base-box-hor.component.html  base-box-hor.component.scss  base-box-hor.component.spec.ts  base-box-hor.component.ts
frontend/src/app/oe/components/base-box-v2/: base-box-v2.component.html  base-box-v2.component.scss  base-box-v2.component.spec.ts  base-box-v2.component.ts
frontend/src/app/oe/components/block-rate-strike-details-v2/: block-rate-strike-details-v2.component.html  block-rate-strike-details-v2.component.scss  block-rate-strike-details-v2.component.spec.ts  block-rate-strike-details-v2.component.ts
frontend/src/app/oe/components/blockrate-strike-summary-v2/: blockrate-strike-summary-v2.component.html  blockrate-strike-summary-v2.component.scss  blockrate-strike-summary-v2.component.spec.ts  (+1 more)
frontend/src/app/oe/interceptors/: auth.interceptor.ts
frontend/src/app/oe/interfaces/: oe-energy.interface.ts  op-energy.interface.ts
frontend/src/app/oe/services/: blockratetimestrike.service.ts  oe-energy.service.ts  state.service.ts  websocket.service.ts
frontend/src/app/oe/types/: constant.ts
frontend/src/app/oe/utils/: helper.ts
frontend/src/environments/: environment.prod.ts  environment.ts
op-energy-api/: README.md  default.nix  generate.sh  op-energy-api.cabal  op-energy-api.nix  overlay-set.nix  shell.nix
op-energy-api/app/: Main.hs
op-energy-api/src/Data/OpEnergy/: API.hs  Client.hs  Common.hs
op-energy-api/src/Data/OpEnergy/API/: Tags.hs  V1.hs  V2.hs
op-energy-api/src/Data/OpEnergy/API/V1/: Account.hs  Block.hs  BlockHeight.hs  Error.hs  Hash.hs  Natural.hs  Positive.hs
op-energy-api/src/Data/OpEnergy/API/V1/WebSocketService/: Message.hs
op-energy-api/src/Data/OpEnergy/API/V2/: BlockSpanSummary.hs
op-energy-api/test/OpEnergy/API/V1/: BlockSpec.hs  HashSpec.hs
op-energy-backend/: derivation.nix  gen-psk-shell.nix  gen-psk.sh  ghci.sh  module-backend.nix  op-energy-backend.cabal  overlay-set.nix  overlay.nix  shell.nix
op-energy-backend/app/: Main.hs
op-energy-backend/documentation/: Handlers_architecture.md  Reorganizations.md
op-energy-backend/src/Data/Bitcoin/: API.hs  BlockInfo.hs  BlockStats.hs
op-energy-backend/src/Data/Text/: Show.hs
op-energy-backend/src/OpEnergy/: Server.hs
op-energy-backend/src/OpEnergy/Server/: Common.hs  GitCommitHash.hs  V1.hs  V2.hs
op-energy-backend/src/OpEnergy/Server/V1/: AccountService.hs  BTC.hs  BlockHeadersService.hs  BlockSpanService.hs  Class.hs  Config.hs  DB.hs  DefaultState.hs  InputVerification.hs  Metrics.hs  StatisticsService.hs  WebSocketService.hs
op-energy-backend/src/OpEnergy/Server/V1/BlockHeadersService/: Cache.hs  CacheMap.hs
op-energy-backend/src/OpEnergy/Server/V1/BlockHeadersService/Map/: Cache.hs  Service.hs
op-energy-backend/src/OpEnergy/Server/V1/BlockHeadersService/Vector/: Cache.hs  Service.hs
op-energy-backend/src/OpEnergy/Server/V1/DB/: Migrations.hs
op-energy-backend/src/OpEnergy/Server/V1/DB/Migrations/: BlockHeaderAddChainreward.hs
op-energy-backend/src/OpEnergy/Server/V1/DB/Migrations/BlockHeaderAddChainreward/: Model.hs
op-energy-backend/src/OpEnergy/Server/V1/StatisticsService/: Histogram.hs
op-energy-backend/src/OpEnergy/Server/V1/WebSocketService/: Message.hs
op-energy-backend/src/OpEnergy/Server/V2/: Environment.hs
op-energy-backend/src/OpEnergy/Server/V2/Core/: App.hs  Call.hs  HandleRequest.hs  Request.hs  SchedulerThread.hs
op-energy-backend/src/OpEnergy/Server/V2/Core/HandleRequest/: GetBlockHeaderByHash.hs  GetBlockHeaderByHeight.hs  Ping.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/: BitcoinClient.hs  DataSource.hs  IOM.hs  Logger.hs  Profiler.hs  Request.hs  STMM.hs  Test.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/BitcoinClient/: Class.hs  Request.hs  Test.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/DataSource/: Class.hs  Request.hs  Test.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/IOM/: Class.hs  Request.hs  Test.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/Logger/: Class.hs  Request.hs  Test.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/Profiler/: Class.hs  Dummy.hs  Manual.hs  Production.hs  Request.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/STMM/: Class.hs  Production.hs
op-energy-backend/src/OpEnergy/Server/V2/Environment/Time/: Class.hs  Manual.hs  Request.hs
op-energy-backend/test/: SpecHook.hs
op-energy-backend/test/OpEnergy/Server/V2/Core/HandleRequest/: GenericHandleRequestSpec.hs
op-energy-backend/test/OpEnergy/Server/V2/Core/HandleRequest/Ping/: PingSpec.hs
op-energy-backend/test/OpEnergy/Server/V2/Core/SchedulerThread/: SchedulerThreadCanExitSpec.hs
op-energy-backend/test/OpEnergy/Server/V2/Core/SchedulerThread/Iteration/: ConfirmationSpec.hs
op-energy-backend/test/OpEnergy/Server/V2/Core/SchedulerThread/Iteration/Confirmation/: ConfirmationSpec.hs  ReorganizationsSpec.hs
op-energy-client/: config.json  default.nix  derivation.nix  overlay-set.nix  shell.nix
(+115 files in other folders)
