cabal-version:      2.4
name:               op-energy-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

executable op-energy-api
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.15.1.0
                    , servant, servant-swagger
                    , swagger2
                    , op-energy-api
                    , aeson
                    , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs: src
    exposed-modules: Data.OpEnergy.API
                   , Data.OpEnergy.API.V1
                   , Data.OpEnergy.API.V1.Natural
                   , Data.OpEnergy.API.V1.Positive
                   , Data.OpEnergy.API.V1.Block
                   , Data.OpEnergy.API.V1.Hash
                   , Data.OpEnergy.API.V1.WebSocketService.Message
                   , Data.OpEnergy.API.V1.Error
                   , Data.OpEnergy.Client
                   , Data.OpEnergy.Common

    build-depends:    base >=4.15.1.0
                    , aeson
                    , text
                    , bytestring
                    , servant, servant-swagger
                    -- for Data.OpEnergy.API.V1.Error
                    , servant-server
                    , servant-websockets
                    , swagger2
                    , time
                    , lens
                    , scientific
                    , random
                    , cryptohash-sha256
                    , base16-bytestring
                    , persistent
                    , persistent-template
                    , cereal
                    , websockets
                    , http-media
                    , http-client, http-client-tls, servant-client
                    , mtl
                    , transformers
                    , data-default

    ghc-options:    -O2 -Wall -Werror -Wno-unticked-promoted-constructors -fno-warn-name-shadowing -Wno-orphans
