cabal-version:      2.4
name:               op-energy-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:
executable op-energy-backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , op-energy-backend
                    , servant
                    , servant-server
                    , warp
                    , async
                    , text
                    , op-energy-api
                    , monad-logger
                    , prometheus-client
                    , wai-middleware-prometheus
    hs-source-dirs:   app
    default-language: Haskell2010
    extensions:       OverloadedStrings
    ghc-options:    -O2 -threaded -rtsopts "-with-rtsopts=-T -N"

library
    hs-source-dirs: src
    exposed-modules: OpEnergy.Server.V1
                   , OpEnergy.Server.V2
                   , OpEnergy.Server.GitCommitHash
                   , OpEnergy.Server
                   , OpEnergy.Server.Common
                   , OpEnergy.Server.V1.Config
                   , OpEnergy.Server.V1.DB
                   , OpEnergy.Server.V1.DB.Migrations
                   , OpEnergy.Server.V1.DB.Migrations.BlockHeaderAddChainreward.Model
                   , OpEnergy.Server.V1.DB.Migrations.BlockHeaderAddChainreward
                   , OpEnergy.Server.V1.Class
                   , OpEnergy.Server.V1.Metrics
                   , OpEnergy.Server.V1.BlockHeadersService
--                    , OpEnergy.Server.V1.BlockHeadersService.Map.Cache
--                    , OpEnergy.Server.V1.BlockHeadersService.Map.Service
                   , OpEnergy.Server.V1.BlockHeadersService.Vector.Cache
                   , OpEnergy.Server.V1.BlockHeadersService.Vector.Service
                   , OpEnergy.Server.V1.WebSocketService
                   , OpEnergy.Server.V1.BlockSpanService
                   , OpEnergy.Server.V1.StatisticsService
                   , OpEnergy.Server.V1.StatisticsService.Histogram
                   , Data.Text.Show
                   , Data.Bitcoin.API
                   , Data.Bitcoin.BlockStats
                   , Data.Bitcoin.BlockInfo

    build-depends:    base ^>=4.15.1.0
                    , aeson
                    , aeson-pretty
                    , text
                    , bytestring
                    , containers
                    , servant
                    , servant-server, servant-client, servant-jsonrpc, servant-jsonrpc-client
                    , websockets, servant-websockets
                    , http-client
                    , servant-swagger
                    , swagger2
                    , time
                    , lens
                    , scientific
                    , persistent, persistent-template, persistent-postgresql, monad-logger
                    , resource-pool
                    , random
                    , cryptohash-sha256
                    , base16-bytestring
                    , op-energy-api
                    , conduit
                    , exceptions
                    , mtl
                    , stm, stm-chans
                    , transformers
                    , warp
                    , monad-logger
                    , prometheus-client
                    , wai-middleware-prometheus
                    , prometheus-metrics-ghc
                    , prometheus-proc
                    , async
                    , unliftio-core
                    , vector
                    , ghc-compact
                    , resourcet
                    , persistent-pagination
                    , safe-exceptions

    ghc-options:    -O2 -Wall -Werror -Wno-unticked-promoted-constructors -fno-warn-name-shadowing -Wno-orphans
    extensions:       OverloadedStrings
                    , ScopedTypeVariables
                    , BangPatterns

