cabal-version:      2.4
name:               op-energy-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:
executable op-energy-backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , op-energy-backend
                    , servant
                    , servant-server
                    , warp
                    , async
                    , text
                    , op-energy-api
                    , monad-logger
                    , prometheus-client
                    , wai-middleware-prometheus
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
                    OverloadedStrings
                  , StrictData
                  , Strict
    ghc-options:    -O2 -threaded -rtsopts "-with-rtsopts=-T -N -c -s"

library
    hs-source-dirs: src
    exposed-modules: OpEnergy.Server.V1
                   , OpEnergy.Server.V2
                   , OpEnergy.Server.V2.Environment
                   , OpEnergy.Server.V2.Environment.Test
                   , OpEnergy.Server.V2.Environment.Request
                   , OpEnergy.Server.V2.Environment.STMM
                   , OpEnergy.Server.V2.Environment.STMM.Class
                   , OpEnergy.Server.V2.Environment.STMM.Production
                   , OpEnergy.Server.V2.Environment.Profiler
                   , OpEnergy.Server.V2.Environment.Profiler.Class
                   , OpEnergy.Server.V2.Environment.Profiler.Request
                   , OpEnergy.Server.V2.Environment.Profiler.Manual
                   , OpEnergy.Server.V2.Environment.Profiler.Production
                   , OpEnergy.Server.V2.Environment.Profiler.Dummy
                   , OpEnergy.Server.V2.Environment.Logger
                   , OpEnergy.Server.V2.Environment.Logger.Class
                   , OpEnergy.Server.V2.Environment.Logger.Request
                   , OpEnergy.Server.V2.Environment.Logger.Test
                   , OpEnergy.Server.V2.Environment.DataSource.Class
                   , OpEnergy.Server.V2.Environment.DataSource.Request
                   , OpEnergy.Server.V2.Environment.DataSource.Test
                   , OpEnergy.Server.V2.Environment.DataSource
                   , OpEnergy.Server.V2.Environment.IOM
                   , OpEnergy.Server.V2.Environment.IOM.Class
                   , OpEnergy.Server.V2.Environment.IOM.Test
                   , OpEnergy.Server.V2.Environment.IOM.Request
                   , OpEnergy.Server.V2.Environment.Time.Class
                   , OpEnergy.Server.V2.Environment.Time.Request
                   , OpEnergy.Server.V2.Environment.Time.Manual
                   , OpEnergy.Server.V2.Environment.BitcoinClient
                   , OpEnergy.Server.V2.Environment.BitcoinClient.Class
                   , OpEnergy.Server.V2.Environment.BitcoinClient.Test
                   , OpEnergy.Server.V2.Environment.BitcoinClient.Request
                   , OpEnergy.Server.V2.Core.App
                   , OpEnergy.Server.V2.Core.Call
                   , OpEnergy.Server.V2.Core.Request
                   , OpEnergy.Server.V2.Core.SchedulerThread
                   , OpEnergy.Server.V2.Core.HandleRequest
                   , OpEnergy.Server.V2.Core.HandleRequest.Ping
                   , OpEnergy.Server.V2.Core.HandleRequest.GetBlockHeaderByHeight
                   , OpEnergy.Server.V2.Core.HandleRequest.GetBlockHeaderByHash
                   -- , OpEnergy.Server.V2.HTTP.BlockHeaderService
                   -- , OpEnergy.Server.V2.HTTP.WebsocketService

                   , OpEnergy.Server.GitCommitHash
                   , OpEnergy.Server
                   , OpEnergy.Server.Common
                   , OpEnergy.Server.V1.Config
                   , OpEnergy.Server.V1.DB
                   , OpEnergy.Server.V1.DB.Migrations
                   , OpEnergy.Server.V1.DB.Migrations.BlockHeaderAddChainreward.Model
                   , OpEnergy.Server.V1.DB.Migrations.BlockHeaderAddChainreward
                   , OpEnergy.Server.V1.Class
                   , OpEnergy.Server.V1.Metrics
                   , OpEnergy.Server.V1.BlockHeadersService
--                    , OpEnergy.Server.V1.BlockHeadersService.Map.Cache
--                    , OpEnergy.Server.V1.BlockHeadersService.Map.Service
                   , OpEnergy.Server.V1.BlockHeadersService.Vector.Cache
                   , OpEnergy.Server.V1.BlockHeadersService.Vector.Service
                   , OpEnergy.Server.V1.WebSocketService
                   , OpEnergy.Server.V1.BlockSpanService
                   , OpEnergy.Server.V1.StatisticsService
                   , OpEnergy.Server.V1.StatisticsService.Histogram
                   , Data.Text.Show
                   , Data.Bitcoin.API
                   , Data.Bitcoin.BlockStats
                   , Data.Bitcoin.BlockInfo

    build-depends:    base ^>=4.15.1.0
                    , aeson
                    , aeson-pretty
                    , text
                    , bytestring
                    , containers
                    , servant
                    , servant-server, servant-client, servant-jsonrpc, servant-jsonrpc-client
                    , websockets, servant-websockets
                    , http-client
                    , servant-swagger
                    , swagger2
                    , time
                    , lens
                    , scientific
                    , persistent, persistent-template, persistent-postgresql, monad-logger
                    , resource-pool
                    , random
                    , cryptohash-sha256
                    , base16-bytestring
                    , op-energy-api
                    , conduit
                    , exceptions
                    , mtl
                    , stm, stm-chans
                    , transformers
                    , warp
                    , monad-logger
                    , prometheus-client
                    , wai-middleware-prometheus
                    , prometheus-metrics-ghc
                    , prometheus-proc
                    , async
                    , unliftio-core
                    , vector
                    , ghc-compact
                    , resourcet
                    , persistent-pagination
                    , safe-exceptions
                    , flow
                    , QuickCheck

    ghc-options:    -O2 -Wall -Werror -Wno-unticked-promoted-constructors -fno-warn-name-shadowing -Wno-orphans
    default-extensions:
                      OverloadedStrings
                    , ScopedTypeVariables
                    , BangPatterns
                    , NumericUnderscores
                    , StrictData
                    , Strict

test-suite op-energy-backend-test
    -- Import common warning flags.
    -- import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    other-modules:
                      SpecHook
                    , OpEnergy.Server.V2.Core.HandleRequest.GenericHandleRequestSpec
                    , OpEnergy.Server.V2.Core.HandleRequest.Ping.PingSpec
                    , OpEnergy.Server.V2.Core.SchedulerThread.SchedulerThreadCanExitSpec
                    , OpEnergy.Server.V2.Core.SchedulerThread.Iteration.ConfirmationSpec
                    , OpEnergy.Server.V2.Core.SchedulerThread.Iteration.Confirmation.ReorganizationsSpec

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Spec.hs

    -- Test dependencies.
    build-depends: base ^>=4.15.1.0
                 , hspec
                 , op-energy-backend
                 , text
                 , mtl
                 , op-energy-api
                 , stm
                 , vector
                 , time
                 , containers
                 , transformers
                 , random
                 , conduit
                 , QuickCheck
                 , flow
                 , vector

    ghc-options: -O2 -Wall -Werror -threaded -rtsopts "-with-rtsopts=-T -N -c -s"
    default-extensions:
                      OverloadedStrings
                    , ScopedTypeVariables
                    , BangPatterns
                    , NumericUnderscores

